# lightbot

./: .gitignore  ChangeLog  Makefile  Makefile.am  Makefile.in  TODO  config.h.in  configure  configure.ac  configure~
.github/workflows/: build.yml
config/: config.json  suggestions.json
config2/: suggestions.json
doc/: .gitignore  Makefile.am  configuring_lightbot.texi  introduction.texi  light.texi
include/: .gitignore  commands.h  common.h  json_config.h  on_ready_event.h  shortcuts.h
src/: Makefile.am  Makefile.in  commands.c  commands.h  common.c  common.h  config.c  config.h  events.c  events.h  json_config.c  light.c  main.c  on_ready_event.c  server.c  server.h  shortcuts.c  spark.c  suggestions.c  suggestions.h  utils.c  utils.h
